--- a/package.json
+++ b/package.json
@@ -9,9 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.2",
+    "@chakra-ui/react": "^2.2.1",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "chess.js": "^0.13.2",
+    "firebase": "^9.8.3",
+    "framer-motion": "^6",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-chessboard": "^1.2.5",
+    "react-dom": "18.1.0",
+    "react-firebase-hooks": "^5.0.3",
+    "react-hot-toast": "^2.2.0",
+    "react-icons": "^4.4.0",
+    "react-loader-spinner": "^5.1.5"
   },
   "devDependencies": {
     "eslint": "8.17.0",
