--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chess.js": "^0.13.2",
     "firebase": "^9.8.3",
     "framer-motion": "^6",
+    "ip-address-validator": "^1.0.5",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-chessboard": "^1.2.5",
