--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-firebase-hooks": "^5.0.3",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.4.0",
-    "react-loader-spinner": "^5.1.5"
+    "react-loader-spinner": "^5.1.5",
+    "react-slick": "^0.29.0"
   },
   "devDependencies": {
     "eslint": "8.17.0",
