--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.4.0",
     "react-loader-spinner": "^5.1.5",
-    "react-slick": "^0.29.0"
+    "react-slick": "^0.29.0",
+    "socket.io-client": "^4.5.1"
   },
   "devDependencies": {
     "eslint": "8.17.0",
