--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^9.8.3",
     "framer-motion": "^6",
     "ip-address-validator": "^1.0.5",
+    "leaflet": "^1.8.0",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-chessboard": "^1.2.5",
@@ -24,8 +25,10 @@
     "react-firebase-hooks": "^5.0.3",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.4.0",
+    "react-leaflet": "^4.0.1",
     "react-loader-spinner": "^5.1.5",
     "react-slick": "^0.29.0",
+    "satellite.js": "^4.1.4",
     "socket.io-client": "^4.5.1"
   },
   "devDependencies": {
