--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^4.4.0",
     "react-leaflet": "^4.0.1",
     "react-loader-spinner": "^5.1.5",
+    "react-nipple": "^1.0.2",
     "react-slick": "^0.29.0",
     "satellite.js": "^4.1.4",
     "socket.io-client": "^4.5.1"
